<resources>
    <string name="app_name">Food Planner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="underline_register_button"><u>Register</u></string>
    <string name="underline_login_button"><u>Login</u></string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_to_your_food_planner">Welcome to Your Food Planner</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="my_plan">My Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_meal">Today\'s Meal</string>
    <string name="for_you">For You</string>
    <string name="today_plan">Today Plan</string>
    <string name="add_to_your_plan">Add to Your Plan</string>
    <string name="remove_from_your_plan">Remove from plan</string>
    <string name="all_ingredients">Ingredients</string>
    <string name="all_categories">Categories</string>
    <string name="all_countries">Countries</string>
    <string name="show_all"><U>Show all</U></string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="meal">Meal</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="search_placeholder_text">First choose what to search for then enter your search.</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="popular_in_egypt">Popular in Egypt</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="web_client_id">178614437136-6so4keu1mhouqcqq7nv4ugckdmudacqo.apps.googleusercontent.com</string>
</resources>