<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite_profile"
        android:title="@string/favorite" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/planFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/my_plan" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>