<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".filter.view.FiltersFragment">

    <EditText
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/round_corners"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="@string/search_hint"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchView"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:visibility="invisible"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_search_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchViewTxtInET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corners"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>-->

    <!--<androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@drawable/round_corners"
        app:queryHint="What are you looking for?" />-->

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/mealChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal" />

        <com.google.android.material.chip.Chip
            android:id="@+id/categoryChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            app:layout_constraintHorizontal_weight="1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ingredientChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient" />

        <com.google.android.material.chip.Chip
            android:id="@+id/countryChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country" />

    </com.google.android.material.chip.ChipGroup>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/searchAnimation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_search" />

    <TextView
        android:id="@+id/searchPlaceholderTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_placeholder_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/searchAnimation"
        app:layout_constraintStart_toStartOf="@id/searchAnimation"
        app:layout_constraintTop_toBottomOf="@id/searchAnimation" />

    <!--<com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/filterShimmerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/chipGroup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/filter_view_shimmer" />

            <include layout="@layout/filter_view_shimmer" />

            <include layout="@layout/filter_view_shimmer" />

            <include layout="@layout/filter_view_shimmer" />

            <include layout="@layout/filter_view_shimmer" />

            <include layout="@layout/filter_view_shimmer" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filtersRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:listitem="@layout/filter_item_view">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>