<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_corners"
    android:padding="24dp"
    tools:context=".register.view.RegisterFragment">

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:textColor="?attr/textFillColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmailTxtInLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTxt"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmailTxtInET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corners"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordTxtInLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerEmailTxtInLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPasswordTxtInET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corners"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTxtInLayout"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordTxtInLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordTxtInET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_corners"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordTxtInLayout"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordTxtInLayout"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTxtInLayout" />

    <TextView
        android:id="@+id/underlineLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/underline_login_button"
        android:textColor="?attr/textFillColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@id/registerBtn"
        app:layout_constraintTop_toBottomOf="@id/registerBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInWithGoogleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/round_corners"
        android:drawableStart="@drawable/ic_google"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:padding="8dp"
        android:text="@string/login_with_google"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/registerBtn"
        app:layout_constraintStart_toStartOf="@id/registerBtn"
        app:layout_constraintTop_toBottomOf="@id/underlineLoginBtn" />

    <!--<androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInWithFacebookBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corners"
        android:drawableStart="@drawable/ic_facebook"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:padding="8dp"
        android:text="@string/login_with_facebook"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/signInWithGoogleBtn"
        app:layout_constraintStart_toStartOf="@id/signInWithGoogleBtn"
        app:layout_constraintTop_toBottomOf="@id/signInWithGoogleBtn" />-->

</androidx.constraintlayout.widget.ConstraintLayout>